--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^10.13.0"
+        "illuminate/contracts": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "illuminate/http": "^5.0|^6.0|^7.0|^8.0|^9.0",
